kubernetes/manifests/k8s-manifest.yml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-test-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-test-app
  namespace: k8s-test-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-test-app
  template:
    metadata:
      labels:
        app: k8s-test-app
    spec:
      containers:
      - name: k8s-test-app
        image: ghcr.io/rodmhgl/k8s-test-app:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: test-data
          mountPath: /data
      volumes:
      - name: test-data
        persistentVolumeClaim:
          claimName: k8s-test-app-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-test-app-service
  namespace: k8s-test-app
spec:
  type: NodePort
  selector:
    app: k8s-test-app
  ports:
  - port: 80
    targetPort: 3000
    nodePort: 30080
