kubernetes/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: testapp-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: www.azurelaboratory.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: k8s-test-app-service
              port:
                number: 80
  tls:
  - hosts:
    - www.azurelaboratory.com
    secretName: testapp-tls
